# lore

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  README.md  docker-entrypoint.sh  justfile
docs/: architecture.md  setup.md
engram-daemon/: Cargo.toml
engram-daemon/src/: claude_client.rs  config.rs  consolidation.rs  ingestion.rs  lib.rs  main.rs  parser.rs  watcher.rs
engram-daemon/tests/: scenarios.rs
engram-db/: Cargo.toml
engram-db/src/: edge.rs  embedding.rs  fragment.rs  lib.rs  query.rs  storage.rs
engram-db/tests/: brain_behavior.rs  live_db_test.rs
engram-mcp/: Cargo.toml
engram-mcp/src/: main.rs  server.rs
engram-plugin/: .mcp.json
engram-plugin/.claude-plugin/: plugin.json
engram-plugin/commands/: recall.md  remember.md
engram-plugin/skills/engram-memory/: SKILL.md
lore-daemon/: Cargo.toml
lore-daemon/src/: claude_client.rs  config.rs  consolidation.rs  ingestion.rs  lib.rs  main.rs  parser.rs  status.rs  watcher.rs
lore-daemon/tests/: new_features.rs  scenarios.rs
lore-db/: Cargo.toml
lore-db/src/: edge.rs  fragment.rs  lib.rs  query.rs  relevance.rs  storage.rs
lore-db/tests/: brain_behavior.rs  live_db_test.rs  new_features.rs
lore-explorer/: Cargo.toml
lore-explorer/src/: main.rs
lore-mcp/: Cargo.toml
lore-mcp/src/: main.rs  server.rs
lore-plugin/: .mcp.json
lore-plugin/.claude-plugin/: plugin.json
lore-plugin/commands/: recall.md  remember.md
lore-plugin/skills/lore-memory/: SKILL.md
lore-server/: Cargo.toml
lore-server/src/: main.rs
lore-tray/: Cargo.toml
lore-tray/linux/: lore.desktop
lore-tray/macos/: AppIcon.icns  Info.plist
lore-tray/src/: icon.rs  main.rs
