[workspace]
resolver = "2"
members = [
    "lore-db",
    "lore-mcp",
    "lore-server",
    "lore-daemon",
    "lore-tray",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
