[package]
name = "lore-daemon"
version = "0.1.0"
edition = "2021"
description = "Background daemon for lore memory ingestion and consolidation"

[dependencies]
lore-db = { path = "../lore-db" }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
toml = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = "0.2"
dirs = { workspace = true }
futures = "0.3"
