[package]
name = "lore-db"
version = "0.1.0"
edition = "2021"
description = "Persistent memory database for AI agents"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
fastembed = "5"
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
