[package]
name = "lore-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for lore memory system"

[dependencies]
lore-db = { path = "../lore-db" }
rmcp = { version = "1", features = ["server", "transport-io"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
