[package]
name = "lore-tray"
version = "0.1.0"
edition = "2021"
description = "System tray icon for the lore daemon"

# Linux build requires system libraries:
#   Debian/Ubuntu: sudo apt install libgtk-3-dev libayatana-appindicator3-dev
#   Fedora:        sudo dnf install gtk3-devel libayatana-appindicator-gtk3-devel

[dependencies]
tray-icon = "0.19"
tao = "0.32"
serde = { workspace = true }
serde_json = { workspace = true }
libc = "0.2"
dirs = { workspace = true }
